[package]
name = "space-invaders"
version = "0.1.0"
authors = ["Kasra Ferdowsifard <kferdowsifard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
log = "0.4"
env_logger = "0.6"
termion = "1.5"
num = "0.2"